--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="container">
-    <div id="popup-text">Hover over me!</div>
-    <div id="popup-message">Hello, World!</div>
-</div>
+<form>
+    <label for="inputField">Input Field:</label>
+    <input id="inputField" type="text">
+</form>
+<div id="message">This message appears when the input field is focused</div>
 
 <script src="index.js"></script>
 </body>
